tests/snapshots/cli__readme_under_a_tracker_glob_is_not_a_tracked_item.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 3 files, no findings

----- stderr -----
