tests/snapshots/cli__status_header_flags_a_missing_header.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
plans/no-status.md: [status-header] missing a `**Status:**` header (expected one of: open, done, implemented)
  help: set a `**Status:**` header to a keyword in `[status-header] live`/`terminal`
aigarden: 1 finding

----- stderr -----
