tests/snapshots/cli__status_header_flags_an_unrecognized_status.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
issues/0004-typo.md: [status-header] status `dnoe` is not a recognized status (expected one of: open, done, implemented)
  help: set a `**Status:**` header to a keyword in `[status-header] live`/`terminal`
ailint: 1 finding

----- stderr -----
