tests/snapshots/cli__suppresses_naming_a_non_frozen_aware_rule_is_a_config_error.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ailint: in config file [CONFIG]: `status-header.suppresses` names `file-length`, which is not a frozen-aware rule (one of: bare-path, link-case, descriptive-anchor)
