tests/snapshots/cli__unknown_config_key_fails_with_exit_two.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: parsing config file [CONFIG]: TOML parse error at line 1, column 2
  |
1 | [nonsense]
  |  ^^^^^^^^
unknown field `nonsense`, expected one of `exclude`, `extend-exclude`, `ignore`, `per-file-ignores`, `file-length`, `markdown-style`, `descriptive-anchor`, `bare-path`, `cog-fresh`, `status-header`
